# example-fractal-task-arguments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check-manifest.yml
single_json_schemas/: extract.py
