[project]
name = "example-tasks"
version = "0.0.1"
description = "Fake tasks package"
readme = "README.md"
authors = [
    { name = "Your Name", email = "first.last@example.com" },
]
requires-python = ">=3.10"
dependencies = ["pydantic>=2", "fractal-task-tools==0.2.0a0"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
